src/test/deca/context/invalid/test_error_3.49-1.deca
// Description:
//    Soulève l'erreur (3.49)
//
// Resultats:
//    Erreur contextuelle
//    Ligne 13 : 'float' et 'boolean' ne sont pas compatibles avec l'opérateur binaire '/' (règle 3.49)
//
// Historique:
//      cree le 06/01/2022

{
	int var;
    var = 1.0 / true;
}
